src/web/snapshots/rustlog__web__tests__admin_badges.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /admin/badges/11111
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
