src/web/snapshots/rustlog__web__tests__admin_badges_post.snap
---
source: src/web/tests.rs
expression: rendered
---
POST /admin/badges/11111
status: 405 Method Not Allowed
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
