src/web/snapshots/rustlog__web__tests__admin_badges_post_no_key.snap
---
source: src/web/tests.rs
expression: rendered
---
POST /admin/badges/11111
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
