src/web/snapshots/rustlog__web__tests__admin_channels_get.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /admin/channels
status: 405 Method Not Allowed
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
