src/web/snapshots/rustlog__web__tests__admin_channels_invalid_body.snap
---
source: src/web/tests.rs
expression: rendered
---
POST /admin/channels
status: 422 Unprocessable Entity
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Failed to deserialize the JSON body into the target type: missing field `channels` at line 1 column 12
