src/web/snapshots/rustlog__web__tests__admin_channels_trailing_slash.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /admin/channels/
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
